--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
       PUBLISH_FOLDER: "_publish"
       ARTIFACT_NAME: SPIDProxy
       RELEASE_VERSION: 6.1.${{ github.run_number}}
+      RELEASE_ZIP_FILENAME: "release.zip"
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     defaults:
@@ -40,21 +41,22 @@ jobs:
       - name: publish
         run: dotnet publish -c Release -o $PUBLISH_FOLDER -p:Version=$RELEASE_VERSION $SOLUTION_FILE
 
-      - name: Upload Build Artifact
-        uses: actions/upload-artifact@v2.2.4
-        with:
-          name: ${{ env.ARTIFACT_NAME }}
-          path: ${{ github.workspace }}/WebApps/Proxy/${{ env.PUBLISH_FOLDER }}
+      # - name: Upload Build Artifact
+      #   uses: actions/upload-artifact@v2.2.4
+      #   with:
+      #     name: ${{ env.ARTIFACT_NAME }}
+      #     path: ${{ github.workspace }}/WebApps/Proxy/${{ env.PUBLISH_FOLDER }}
       
       - name: Zip Release
         uses: TheDoctor0/zip-release@0.6.0
         with:
-          path: ./WebApps/Proxy/${{ env.PUBLISH_FOLDER }}
+          directory: ./WebApps/Proxy/${{ env.PUBLISH_FOLDER }}
+          filename: ./WebApps/Proxy/${{ env.PUBLISH_FOLDER }}/${{ env.RELEASE_ZIP_FILENAME }}
       
-      - name: Create Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: ./release.zip
-          commit: ${{ github.sha }}
-          tag: v${{ env.RELEASE_VERSION }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Create Release
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     artifacts: ./WebApps/Proxy/${{ env.PUBLISH_FOLDER }}/${{ env.RELEASE_ZIP_FILENAME }}
+      #     commit: ${{ github.sha }}
+      #     tag: v${{ env.RELEASE_VERSION }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
