Add support for ForwardedHeaders Middleware
 - If the ASPNETCORE_FORWARDEDHEADERS_ENABLED env variable is set to true, then ForwardedHeadersOptions are loaded from configuration
 - The ForwardHeaders section in the appsettings matches with the ForwardHeadersOptions object. Every property of ForwardHeadersOptions can be set via appsettings
 - KnownNetworks and KnownProxies can be set using a comma separated string of CIDR and IPs respectively

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -157,5 +157,8 @@
 			"sp-proxy.eid.gov.it/spproxy/idpit": "https://sp-proxy.eid.gov.it/spproxy/idpitmetadata"
 		},
 		"CacheAbsoluteExpirationInMins": 120
+	},
+	"ForwardedHeaders": {
+		"ForwardedHeaders": "All"
 	}
 }
