Change ApplicationInsights logging configuration
 - Change LogLevel for Default to Warning
 - Change LogLevel for Microsoft.SPID to Information
 - Disable AdaptiveSampling by default

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -8,7 +8,8 @@
 		},
 		"ApplicationInsights": {
 			"LogLevel": {
-				"Default": "Information"
+				"Default": "Warning",
+				"Microsoft.SPID": "Information"
 			}
 		},
 		"EventLog": {
@@ -22,6 +23,9 @@
 				"SourceName": "SPIDProxy" //the source must already exist. Create it via Powershell (NO pwsh and as Administrator) with New-EventLog
 			}
 		}
+	},
+	"ApplicationInsights":{
+		"EnableAdaptiveSampling": false
 	},
 	"AllowedHosts": "*",
 	"webpages:Version": "3.0.0.0",
