Add option to log decoded SAMLResponse  - Add LoggingOptions class with LogDecodedSamlResponse prop (defaults to false)  - Add SPIDProxyLogging section in appsettings.json  - Move LogAccess section inside SPIDProxyLogging section  - Change Configure<T> methods accordingly  - Add INCOMING_SAML_RESPONSE_DECODED event

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -32,10 +32,6 @@
 	"webpages:Enabled": false,
 	"ClientValidationEnabled": true,
 	"UnobtrusiveJavaScriptEnabled": true,
-	"LogAccess": {
-		"Enabled": true,
-		"FieldsToLog": "fiscalNumber,email,name,familyName"
-	},
 	"Certificate": {
 		"CertName": "YourPfxName.pfx",
 		"CertPassword": "YourPfxPassword"
@@ -161,5 +157,12 @@
 			"sp-proxy.eid.gov.it/spproxy/idpit": "https://sp-proxy.eid.gov.it/spproxy/idpitmetadata"
 		},
 		"CacheAbsoluteExpirationInMins": 120
+	},
+	"SPIDProxyLogging": {
+		"LogDecodedSamlResponse": false,
+		"LogAccess": {
+			"Enabled": true,
+			"FieldsToLog": "fiscalNumber,email,name,familyName,spidCode"
+		}
 	}
 }
