Add ForwardedHeaders:AllowedHosts as comma-separated string instaed of array  - Default AllowedHosts is *, which means all hosts

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -159,7 +159,7 @@
 		"CacheAbsoluteExpirationInMins": 120
 	},
 	"ForwardedHeaders": {
-		//"AllowedHosts": [ "allowedhost1.com", "allowedhost2.com", "allowedhostN.com" ],
+		"AllowedHosts": "*",
 		"ForwardedHeaders": "All"
 	},
 	"SPIDProxyLogging": {
