Add SkipSignaturesValidation prop to TechnicalChekcsOptions  - Add a flag to skip the signatures validation completely (defaults to false)

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -76,7 +76,8 @@
 
 	"TechnicalChecks": {
 		"SkipTechnicalChecks": false,
-		"SkipAssertionSignatureValidation": false
+		"SkipAssertionSignatureValidation": false,
+		"SkipSignaturesValidation": false
 	},
 
 	"idpUrls": {
