--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -24,7 +24,7 @@
 			}
 		}
 	},
-	"ApplicationInsights":{
+	"ApplicationInsights": {
 		"EnableAdaptiveSampling": false
 	},
 	"AllowedHosts": "*",
@@ -32,9 +32,11 @@
 	"webpages:Enabled": false,
 	"ClientValidationEnabled": true,
 	"UnobtrusiveJavaScriptEnabled": true,
+	"KeyVaultName": "",
 	"Certificate": {
-		"CertName": "YourPfxName.pfx",
-		"CertPassword": "YourPfxPassword"
+		"CertLocation": "ServerRelativeStorage",
+		"CertName": "",
+		"CertPassword": ""
 	},
 	"Federator": {
 		"MetadataUrl": "https://your.adfs.metadata.url/FederationMetadata/2007-06/FederationMetadata.xml",
