Support reverse proxies (#29)
* Use Request.Scheme instead of 'https'
* Add support for ForwardedHeaders Middleware
 - If the ASPNETCORE_FORWARDEDHEADERS_ENABLED env variable is set to true, then ForwardedHeadersOptions are loaded from configuration
 - The ForwardHeaders section in the appsettings matches with the ForwardHeadersOptions object. Every property of ForwardHeadersOptions can be set via appsettings
 - KnownNetworks and KnownProxies can be set using a comma separated string of CIDR and IPs respectively
 - AllowedHosts can be set using a comma separated string of hosts. Default AllowedHosts is *, which means all hosts
* Use IConfigureOptions<T> to configure ForwardedHeadersOptions
* Always use the SAMLService to retrieve the SPIDProxxy Assertion Consumer endpoint url

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -159,6 +159,10 @@
 		},
 		"CacheAbsoluteExpirationInMins": 120
 	},
+	"ForwardedHeaders": {
+		"AllowedHosts": "*",
+		"ForwardedHeaders": "All"
+	},
 	"SPIDProxyLogging": {
 		"LogDecodedSamlResponse": false,
 		"LogAccess": {
