--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -40,7 +40,8 @@
     },
     "Federator": {
         "MetadataUrl": "https://your.adfs.metadata.url/FederationMetadata/2007-06/FederationMetadata.xml",
-        "SPIDEntityId": "https://your.adfs.url/adfs/services/trust",
+        "SPIDEntityId": "SPIDhttps://your.adfs.url/adfs/services/trust",
+        "CIEEntityId": "CIEhttps://your.adfs.url/adfs/services/trust",
         "EntityId": "https://your.adfs.url/adfs/services/trust",
         "FederatorAttributeConsumerServiceUrl": "https://adfs.url/adfs/ls",
         "X509IncludeOption": "EndCertOnly"
