Add EventLog and ForwardedHeaders middleware

--- a/WebApps/CNS.Auth.Web/appsettings.json
+++ b/WebApps/CNS.Auth.Web/appsettings.json
@@ -9,6 +9,17 @@
 			"LogLevel": {
 				"Default": "Information"
 			}
+		},
+		"EventLog": {
+			"LogLevel": {
+				"Default": "Information",
+				"Microsoft": "Warning",
+				"CNS.Auth.Web": "Information",
+				"Microsoft.Hosting.Lifetime": "Information"
+			},
+			"Settings": {
+				"SourceName": "CNS" //the source must already exist. Create it via Powershell (NO pwsh and as Administrator) with New-EventLog
+			}
 		}
 	},
 	"AllowedHosts": "*",
