--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -123,7 +123,11 @@
         "DEMOSPIDGOVVALIDATOR": "https://demo.spid.gov.it/validator/samlsso",
         "DEMOSPIDGOVVALIDATOR_LOGOUT": "https://demo.spid.gov.it/validator/samlsso",
         "TEAMSYSTEM": "https://spid.teamsystem.com/idp/sso/redirect",
-        "TEAMSYSTEM_LOGOUT": "https://spid.teamsystem.com/idp/logout/redirect"
+        "TEAMSYSTEM_LOGOUT": "https://spid.teamsystem.com/idp/logout/redirect",
+        "ETNAHITECH": "https://id.eht.eu/SSO",
+        "ETNAHITECH_LOGOUT": "https://id.eht.eu/SLS",
+        "INFOCAMERE": "https://loginspid.infocamere.it/ServiceLoginWelcome",
+        "INFOCAMERE_LOGOUT": "https://loginspid.infocamere.it/ServiceLogoutRequest"
     },
 
     "customErrors": {
@@ -161,7 +165,9 @@
             "idserver.servizicie.interno.gov.it/idp/profile/SAML2/POST/SSO": "https://idserver.servizicie.interno.gov.it/idp/shibboleth?Metadata",
             "sp-proxy.pre.eid.gov.it/spproxy/idpit": "https://sp-proxy.pre.eid.gov.it/spproxy/idpitmetadata",
             "sp-proxy.eid.gov.it/spproxy/idpit": "https://sp-proxy.eid.gov.it/spproxy/idpitmetadata",
-            "spid.teamsystem.com/idp": "https://spid.teamsystem.com/idp"
+            "spid.teamsystem.com/idp": "https://spid.teamsystem.com/idp",
+            "id.eht.eu": "https://id.eht.eu/metadata.xml",
+            "loginspid.infocamere.it": "https://loginspid.infocamere.it/metadata"
         },
         "CacheAbsoluteExpirationInMins": 120
     },
