Refactor CIE and SPID SpidLevel, fix retrieval of Referer queryString
- Comparison is now configurable for both CIE and SPID
- Comparison can be customized via Referer, RelayState, wctx, just like SpidLevel and AttrConsumingService index
- CIE now has separate configuration for SpidLevel

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -47,7 +47,8 @@
         "X509IncludeOption": "EndCertOnly"
     },
     "spid": {
-        "DefaultSPIDL": 1,
+        "DefaultSPIDL": 2,
+        "DefaultComparison": "minimum",
         "ValidSPIDL": [
             1,
             2,
@@ -63,7 +64,12 @@
         ],
         "PurposeName": "Purpose",
         "SpidLevelQueryStringParamName": "spidL",
+        "ComparisonQueryStringParamName": "comparison",
         "AssertionIssueInstantToleranceMins": 15
+    },
+    "cie": {
+        "DefaultSPIDL": 3,
+        "DefaultComparison": "minimum"
     },
     "attributeConsumingService": {
         "AttributeConsumingServiceDefaultValue": 0,
