Add configurable dateOfBirth alteration

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -28,10 +28,6 @@
         "EnableAdaptiveSampling": false
     },
     "AllowedHosts": "*",
-    "webpages:Version": "3.0.0.0",
-    "webpages:Enabled": false,
-    "ClientValidationEnabled": true,
-    "UnobtrusiveJavaScriptEnabled": true,
     "KeyVaultName": "",
     "Certificate": {
         "CertLocation": "ServerRelativeStorage",
@@ -187,5 +183,9 @@
             "Enabled": true,
             "FieldsToLog": "fiscalNumber,email,name,familyName,spidCode"
         }
+    },
+    "OptionalResponseAlteration": {
+        "AlterDateOfBirth": true,
+        "DateOfBirthFormat": "xs:date"
     }
 }
