AlterDateOfBirth default to false in appsettings.json

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -185,7 +185,7 @@
         }
     },
     "OptionalResponseAlteration": {
-        "AlterDateOfBirth": true,
+        "AlterDateOfBirth": false,
         "DateOfBirthFormat": "xs:date"
     }
 }
