--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -129,7 +129,9 @@
         "ETNAHITECH": "https://id.eht.eu/SSO",
         "ETNAHITECH_LOGOUT": "https://id.eht.eu/SLS",
         "INFOCAMERE": "https://loginspid.infocamere.it/ServiceLoginWelcome",
-        "INFOCAMERE_LOGOUT": "https://loginspid.infocamere.it/ServiceLogoutRequest"
+        "INFOCAMERE_LOGOUT": "https://loginspid.infocamere.it/ServiceLogoutRequest",
+        "INTESIGROUP": "https://spid.intesigroup.com/saml/public/income",
+        "INTESIGROUP_LOGOUT": "https://spid.intesigroup.com/saml/public/logout"
     },
 
     "customErrors": {
@@ -169,7 +171,8 @@
             "sp-proxy.eid.gov.it/spproxy/idpit": "https://sp-proxy.eid.gov.it/spproxy/idpitmetadata",
             "spid.teamsystem.com/idp": "https://spid.teamsystem.com/idp",
             "id.eht.eu": "https://id.eht.eu/metadata.xml",
-            "loginspid.infocamere.it": "https://loginspid.infocamere.it/metadata"
+            "loginspid.infocamere.it": "https://loginspid.infocamere.it/metadata",
+            "idp.intesigroup.com": "https://spid.intesigroup.com/metadata/metadata.xml"
         },
         "CacheAbsoluteExpirationInMins": 120
     },
