Inject User-Agent if enabled in config

--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -190,5 +190,9 @@
     "OptionalResponseAlteration": {
         "AlterDateOfBirth": false,
         "DateOfBirthFormat": "xs:date"
+    },
+    "UserAgent": {
+        "Value": "SPIDProxy/8.0",
+        "Enabled": false
     }
 }
