--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -71,7 +71,9 @@
         "AttributeConsumingServiceDefaultValue": 0,
         "UpdateAssertionConsumerServiceUrl": true,
         "ValidACS": "0,1,2",
+        "CIEValidACS": "50,60,70",
         "AttrConsServIndexQueryStringParamName": "spidACS",
+        "CIEAttrConsServIndexQueryStringParamName": "cieACS",
         "CIEAttributeConsumingService": 50,
         "EIDASAttributeConsumingService": 100
     },
