--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -61,7 +61,8 @@
         "PurposeName": "Purpose",
         "SpidLevelQueryStringParamName": "spidL",
         "ComparisonQueryStringParamName": "comparison",
-        "AssertionIssueInstantToleranceMins": 15
+        "AssertionIssueInstantToleranceMins": 15,
+        "DisableSpidLevelFromReferer": false
     },
     "cie": {
         "DefaultSPIDL": 3,
