--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -76,7 +76,8 @@
         "AttrConsServIndexQueryStringParamName": "spidACS",
         "CIEAttrConsServIndexQueryStringParamName": "cieACS",
         "CIEAttributeConsumingService": 50,
-        "EIDASAttributeConsumingService": 100
+        "EIDASAttributeConsumingService": 100,
+        "DisableACSFromReferer": false
     },
 
     "APPINSIGHTS_INSTRUMENTATIONKEY": "",
