--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -61,7 +61,8 @@
         "PurposeName": "Purpose",
         "SpidLevelQueryStringParamName": "spidL",
         "ComparisonQueryStringParamName": "comparison",
-        "AssertionIssueInstantToleranceMins": 15
+        "AssertionIssueInstantToleranceMins": 15,
+        "DisableSpidLevelFromReferer": false
     },
     "cie": {
         "DefaultSPIDL": 3,
@@ -71,9 +72,12 @@
         "AttributeConsumingServiceDefaultValue": 0,
         "UpdateAssertionConsumerServiceUrl": true,
         "ValidACS": "0,1,2",
+        "CIEValidACS": "50,60,70",
         "AttrConsServIndexQueryStringParamName": "spidACS",
+        "CIEAttrConsServIndexQueryStringParamName": "cieACS",
         "CIEAttributeConsumingService": 50,
-        "EIDASAttributeConsumingService": 100
+        "EIDASAttributeConsumingService": 100,
+        "DisableACSFromReferer": false
     },
 
     "APPINSIGHTS_INSTRUMENTATIONKEY": "",
