--- a/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
+++ b/WebApps/Proxy/Microsoft.SPID.Proxy/appsettings.json
@@ -193,7 +193,9 @@
     },
     "OptionalResponseAlteration": {
         "AlterDateOfBirth": false,
-        "DateOfBirthFormat": "xs:date"
+        "DateOfBirthFormat": "xs:date",
+        "ExtractAuthnContextClassRef": false,
+        "AuthnContextClassRefClaimName": "spidLevel"
     },
     "UserAgent": {
         "Value": "SPIDProxy/8.0",
