--- a/WebApps/CNS.Auth.Web/appsettings.json
+++ b/WebApps/CNS.Auth.Web/appsettings.json
@@ -28,7 +28,9 @@
 		"TrustedListFileUrl": "https://eidas.agid.gov.it/TL/TSL-IT.xml",
 		"LogCertificate": true,
 		"LogSubject": true,
-		"BlockIfMissingGivenNameOrSurname": false
+		"BlockIfMissingGivenNameOrSurname": false,
+		"GivenNamePlaceholder": "Utente",
+		"SurnamePlaceholder": "Non Disponibile"
 	},
 	"CertificateForwarding": {
 		"CertificateHeaderName": "X-ARR-ClientCert",
