--- a/.github/workflows/cns-pr.yml
+++ b/.github/workflows/cns-pr.yml
@@ -31,9 +31,10 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v1.8.2
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: 8.x
+          dotnet-quality: ga
 
       - name: publish
         run: dotnet publish -c Release -o $PUBLISH_FOLDER $SOLUTION_FILE
